[gd_scene load_steps=13 format=3 uid="uid://d23u3bg73f2he"]

[ext_resource type="Script" path="res://Entities/Entities/CrusherEntity.gd" id="1_0gscn"]
[ext_resource type="Texture2D" uid="uid://dn317g7xjubkp" path="res://Shared/animations/crusher_idle.png" id="2_t0qjn"]
[ext_resource type="Script" path="res://Systems/Power/PowerOnDemand.gd" id="3_ku1t5"]
[ext_resource type="Theme" uid="uid://weaopiyujqgb" path="res://Shared/PixelTheme/pixel_theme.tres" id="4_o7nak"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktmyr"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xowi"]
atlas = ExtResource("2_t0qjn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkwhj"]
atlas = ExtResource("2_t0qjn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ns20y"]
atlas = ExtResource("2_t0qjn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dvgis"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xowi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkwhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns20y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y3xi3"]
size = Vector2(6, 16)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_71hak"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hox8i"]
bg_color = Color(0, 0.717647, 0.364706, 1)

[node name="CrusherEntity" type="StaticBody2D" groups=["power_receivers"]]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_0gscn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ktmyr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dvgis")
frame_progress = 0.413087

[node name="InputArea" type="Area2D" parent="."]
position = Vector2(-10, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InputArea"]
shape = SubResource("RectangleShape2D_y3xi3")

[node name="OuputArea" type="Area2D" parent="."]
position = Vector2(13, 0)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuputArea"]
shape = SubResource("RectangleShape2D_y3xi3")

[node name="PowerReceiver" type="Node2D" parent="."]
script = ExtResource("3_ku1t5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = -17.0
offset_top = -48.0
offset_right = 23.0
offset_bottom = -8.0
theme = ExtResource("4_o7nak")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_71hak")
theme_override_styles/fill = SubResource("StyleBoxFlat_hox8i")
value = 31.01
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
